--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6fc185">  <td>19/05/02 18:59:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AllContactsTest.SetUp()[pri:0, instance:com.alist.qa.testcases.AllContactsTest@eec5a4a]">&gt;&gt;SetUp</td> 
+<tr bgcolor="6fc185">  <td>19/05/03 20:11:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserDetailsTest.SetUp()[pri:0, instance:com.alist.qa.testcases.UserDetailsTest@eec5a4a]">&gt;&gt;SetUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325808650</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>19/05/02 18:59:26</td>   <td>13682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AllContactsTest.checkContactColumnsTest()[pri:3, instance:com.alist.qa.testcases.AllContactsTest@eec5a4a]">checkContactColumnsTest</td> 
+<tr bgcolor="6fc185">  <td>19/05/03 20:11:36</td>   <td>11186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserDetailsTest.checkFileUploadTest()[pri:1, instance:com.alist.qa.testcases.UserDetailsTest@eec5a4a]">checkFileUploadTest</td> 
   <td>main@1325808650</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>19/05/02 18:59:25</td>   <td>13131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AllContactsTest.checkPageHeadingAndCountTest()[pri:2, instance:com.alist.qa.testcases.AllContactsTest@eec5a4a]">checkPageHeadingAndCountTest</td> 
-  <td>main@1325808650</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>19/05/02 18:59:25</td>   <td>13093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AllContactsTest.checkPageTitleTest()[pri:1, instance:com.alist.qa.testcases.AllContactsTest@eec5a4a]">checkPageTitleTest</td> 
-  <td>main@1325808650</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>19/05/02 18:59:26</td>   <td>14047</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AllContactsTest.tearDown()[pri:0, instance:com.alist.qa.testcases.AllContactsTest@eec5a4a]">&lt;&lt;tearDown</td> 
+<tr bgcolor="6fc185">  <td>19/05/03 20:11:43</td>   <td>17982</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UserDetailsTest.tearDown()[pri:0, instance:com.alist.qa.testcases.UserDetailsTest@eec5a4a]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325808650</td>   <td></td> </tr>
 </table>
